<resources>
    <string name="app_name">My Application</string>
    <string name="Logout">logout</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="have_an_account">have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="weather_lister">Weather Lister</string>
    <string name="todo">TODO</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="_10c">10c</string>
    <string name="_0h">0h</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_new_point">Add a new Point</string>
</resources>